tests/invalid/precedence_key_over_duplicate.nano
..
    bad.key value
    name first
    name second
